adicionando detalhes do cliente

--- a/src/componentes/cliente/style.css
+++ b/src/componentes/cliente/style.css
@@ -3,31 +3,46 @@
     gap: 2em;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .conteudo {
-    display: flex;
-    gap: 2em;
-    overflow: hidden;
-  }
-  .acoes {
-    display: flex;
-    align-items: center;
-    gap: 2em;
-  }
-  
-  .icone {
-    height: 1.2em;
-    width: 1.2em;
-  }
-  
-  .edit {
-    margin: auto auto;
-    color: blue;
-  }
-  .form-cliente label {
-    margin: 0.2em;
-    color:gray
-  }
+}
+
+.conteudo {
+  display: flex;
+  gap: 2em;
+  overflow: hidden;
+}
+.acoes {
+  display: flex;
+  align-items: center;
+  gap: 2em;
+}
+
+.icone {
+  height: 1.2em;
+  width: 1.2em;
+}
+
+.edit {
+  margin: auto auto;
+  color: blue;
+}
+.form-cliente label {
+  margin: 0.2em;
+  color:gray
+}
+.detalhes {
+  margin: 0.8em 1em;  
+}
+
+.detalhes-item {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.detalhes-item div {
+  flex: 1 1 30em;
+  min-width: 33%;
+  overflow: hidden;
+  margin-bottom: 0.2em;
+}
 
  
